--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 </div>
 
 <script>
-const aboutText = `Привет! Меня зовут Павел, и я живу с огнём в сердце и страстью к технике. Моя любовь к квадроциклам родилась с первых минут за рулём — ощущение свободы и адреналина не сравнимо ни с чем. Но техника для меня — не только железо и скорость, это возможность создавать, исследовать и постоянно учиться новому. Я человек, который ценит каждое мгновение, стремлюсь к совершенству и всегда ищу вызовы, чтобы стать лучше. Эта страсть вдохновляет меня двигаться вперёд и открывать для себя новые горизонты. Переходите и Подписывайтесь на мои соцсети, спасибо.`;
+const aboutText = `Привет! Меня зовут Павел, и я живу с огнём в сердце и страстью к технике. Моя любовь к квадроциклам родилась с первых минут за рулём — ощущение свободы и адреналина не сравнимо ни с чем. Но техника для меня — не только железо и скорость, это возможность создавать, исследовать и постоянно учиться новому,в данный момент я обладаю 9-ти летним опытом езды на квадроцикле,и совсем не давно пересел с Stels Guepard 850G на Yamaha YFZ 450. Я человек, который ценит каждое мгновение, стремлюсь к совершенству и всегда ищу вызовы, чтобы стать лучше. Эта страсть вдохновляет меня двигаться вперёд и открывать для себя новые горизонты. Переходите и Подписывайтесь на мои соцсети, спасибо.`;
 
 const typingElement = document.getElementById('typing-text');
 let index = 0;
@@ -99,7 +99,7 @@ let stars = [];
 
 function init() {
   w = window.innerWidth;
-  h = window.innerHeight;
+  h = window.innerHeight;                            
   canvas.width = w;
   canvas.height = h;
 
