--- a/about.html
+++ b/about.html
@@ -77,7 +77,10 @@
 </div>
 
 <script>
-const aboutText = `Привет! Меня зовут Павел, и я живу с огнём в сердце и страстью к технике. Моя любовь к квадроциклам родилась с первых минут за рулём — ощущение свободы и адреналина не сравнимо ни с чем. Но техника для меня — не только железо и скорость, это возможность создавать, исследовать и постоянно учиться новому,в данный момент я обладаю 9-ти летним опытом езды на квадроцикле,и совсем не давно пересел с Stels Guepard 850G на Yamaha YFZ 450. Я человек, который ценит каждое мгновение, стремлюсь к совершенству и всегда ищу вызовы, чтобы стать лучше. Эта страсть вдохновляет меня двигаться вперёд и открывать для себя новые горизонты. Переходите и Подписывайтесь на мои соцсети, спасибо.`;
+const aboutText = `Меня зовут Павел, мне 14 лет. Я активно развиваюсь в спорте и технологиях, уделяю внимание как физическому, так и ментальному росту. Занимаюсь боксом — работаю над выносливостью, дисциплиной и силой, поскольку верю, что спорт учит не только телу, но и характеру.
+Параллельно я увлечён программированием и создаю собственного Telegram-ассистента PavelPA с функциями голосовых ответов, напоминаний и генерации изображений. Этот проект помогает мне изучать современные технологии и искусственный интеллект на практике.
+С детства я фанат техники и мечтал о квадроцикле Yamaha YFZ 450 — моей мечте уже более 10 лет, и совсем недавно она сбылась. Этот квадроцикл для меня не просто средство передвижения — это символ упорства и награда за труд.
+Мне интересно открывать новое, ставить амбициозные цели и постепенно превращать мечты в реальность. Я уверен, что именно сочетание дисциплины, технологий и страсти к развитию поможет мне добиться успеха в будущем.`;
 
 const typingElement = document.getElementById('typing-text');
 let index = 0;
