--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 <nav>
   <a href="index.html">Главная</a>
   <a href="https://www.tiktok.com/@pauelky" target="_blank" rel="noopener noreferrer">TikTok</a>
-  <a href="https://t.me/username_pasha_Bot" target="_blank" rel="noopener noreferrer">Telegram-бот</a>
+  <a href="https://t.me/PauelkyyBot" target="_blank" rel="noopener noreferrer">Telegram-бот</a>
 </nav>
 
 <div class="container">
