--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="nav-links">
     <a href="about.html">Обо мне</a>
     <a href="https://www.tiktok.com/@pauelky" target="_blank" rel="noopener noreferrer">TikTok</a>
-    <a href="https://t.me/username_pasha_Bot" target="_blank" rel="noopener noreferrer">Telegram-бот</a>
+    <a href="https://t.me/PauelkyyBot" target="_blank" rel="noopener noreferrer">Telegram-бот</a>
   </div>
 </div>
 
