--- a/about.html
+++ b/about.html
@@ -59,6 +59,26 @@
   @keyframes fadeIn {
     to {opacity:1;}
   }
+
+  /* Адаптив для планшетов и телефонов */
+  @media (max-width: 768px) {
+    .container {
+      margin: 50px 20px;
+      padding: 15px 20px;
+      max-width: 95%;
+    }
+    h2 {
+      font-size: 28px;
+    }
+    #typing-text {
+      font-size: 16px;
+    }
+    nav a {
+      margin: 8px 10px;
+      padding: 8px 14px;
+      font-size: 14px;
+    }
+  }
 </style>
 </head>
 <body>
